feat: put, patch and delete post
